test_data/end_to_end/err__resolve_path_indirect/stderr.txt
error: expected module
  --> main.cz:9:5
9 | use S::*;
        ~

error: name `S` is defined multiple times
  --> main.cz:10:9
10 | use m1::S;
             ~

error: missing field `x` in initializer of struct `S`
  --> main.cz:14:5
14 |     S{};
         ~~~
